--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,40 @@
 body {
-  padding: 50px;
+  padding: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+.bg-image {
+  padding: 10px;
+}
+
+.form-container {
+  width: 300px;
+  border-radius: 15px;
+  margin-left: 100px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.btn-full {
+  background-color: rgb(153, 122, 51);
+  border: 0cm;
+  width: 100%;
+  height: 45px;
+  border-radius: 0px 0px 15px 15px;
+  color: white;
+  font-size: larger;
+  font-weight: bold;
+}
+
+.fa.fa-arrow-right {
+  padding-inline-start: 20px;
+}
+
+#map {
+  height: 280px;
+  width: 100%;
 }
