--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,7 +14,7 @@ a {
 .form-container {
   width: 300px;
   border-radius: 15px;
-  margin-left: 100px;
+  margin-left: 1vw;
   margin-top: 50px;
   margin-bottom: 50px;
 }
