Autocomplete address finder started

--- a/views/partials/_ride_form.pug
+++ b/views/partials/_ride_form.pug
@@ -3,11 +3,17 @@
         .p-1
             h5 Book a Taxi
         div.form-group.p-2#from
-            label(for="from") From:
-            input#from.bg-dark.text-white.form-control(type="text", placeholder="Pick-up location") 
+            label(for="from-input") From:
+            input#from-input.bg-dark.text-white.form-control(type="text", placeholder="Pick-up location") 
+            .suggestions 
+                ul 
+        
         div.form-group.p-2
-            label(for="to") To:
-            input#to.bg-dark.text-white.form-control(type="text", placeholder="Drop-off location") 
+            label(for="to-inpu") To:
+            input#to-input.bg-dark.text-white.form-control(type="text", placeholder="Drop-off location") 
+            .suggestionsTo 
+                ul 
+
         div.form-group.p-2
             label(for="pickatime") Date and Time:
 
