--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,18 +10,21 @@ html
     link(rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
      integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
      crossorigin="")
-
     link(rel="stylesheet" href="https://unpkg.com/leaflet-geosearch@3.0.0/dist/geosearch.css")
-
     link(href="//unpkg.com/leaflet/dist/leaflet.css" rel="stylesheet")
 
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous")
+
     script(src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
      integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
      crossorigin="")
+
+    script(src="//unpkg.com/@sjaakp/leaflet-search/dist/leaflet-search.js")
     script(src="https://unpkg.com/leaflet-geosearch@3.0.0/dist/geosearch.umd.js")
     
-    script(src="//unpkg.com/@sjaakp/leaflet-search/dist/leaflet-search.js")
+
+    link(rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css")
+    script(src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js")
 
   body(style="color: white;")
     
