added markers and line for both inputs

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
 
-  div(class="bg-image", 
+  div(class="bg-image flex", 
       style=` 
       background-size: cover;
       background-image:url(${"/images/home.jpg"})`)
