--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,11 +12,27 @@ a {
 }
 
 .form-container {
-  width: 300px;
-  border-radius: 15px;
+  min-width: 200px;
+  max-width: 500px;
+  width: auto;
+  border-radius: 10px;
   margin-left: 1vw;
   margin-top: 50px;
   margin-bottom: 50px;
+}
+
+.form-group {
+  padding: 0px 15px 0px 15px;
+}
+
+.form-control {
+  border: 0;
+  border-radius: 5px;
+  background-color: rgb(57, 61, 65);
+  height: 40px;
+}
+.form-control:focus {
+  background-color: rgb(57, 61, 65);
 }
 
 .btn-full {
