--- a/views/partials/nav.pug
+++ b/views/partials/nav.pug
@@ -1,7 +1,7 @@
 nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
             .container
                 img(src="/images/company_logo_inv.png", alt="" style="max-height: 40px; padding-right: 10px")
-                a.navbar-brand Allure Taxi
+                a.navbar-brand Allure Taxi 
                 button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
                     span.navbar-toggler-icon
                 #navbarSupportedContent.collapse.navbar-collapse
@@ -9,6 +9,8 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
                         li.nav-item
                             a.nav-link.active(aria-current='page', href='/') Home
                         li.nav-item
-                            a.nav-link(href='#!') About
+                            a.nav-link(href='book') Book
                         li.nav-item
-                            a.nav-link(href='#!') Contact
+                            a.nav-link(href='about') About Us
+                        li.nav-item
+                            a.nav-link(href="/#contact") Contact
