--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,20 +9,20 @@ a {
 
 .bg-image {
   padding: 10px;
+  height: 600px;
 }
 
 .form-container {
   min-width: 200px;
   max-width: 500px;
-  width: auto;
   border-radius: 10px;
   margin-left: 1vw;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-top: 40px;
+  padding: 0px 0px 0px 0px;
 }
 
 .form-group {
-  padding: 0px 15px 0px 15px;
+  padding: 5px 15px 5px 15px;
 }
 
 .form-control {
@@ -44,6 +44,7 @@ a {
   color: white;
   font-size: larger;
   font-weight: bold;
+  margin-top: 15px;
 }
 
 .fa.fa-arrow-right {
@@ -51,6 +52,14 @@ a {
 }
 
 #map {
-  height: 280px;
-  width: 100%;
+  visibility: hidden;
+  width: 500px;
+  max-width: 550px;
+  height: 350px;
+  border-radius: 0px 10px 10px 0px;
+  margin-top: 40px;
+}
+
+#contact {
+
 }
